--- a/index.html
+++ b/index.html
@@ -2,36 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SmartERP Login</title>
-  <link rel="stylesheet" href="lib/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart ERP</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light d-flex align-items-center justify-content-center vh-100">
+<body>
+  <div class="container mt-5">
+    <h1 class="text-center mb-4">Smart ERP Login</h1>
 
-  <div class="card p-4 shadow" style="width:350px;">
-    <h4 class="text-center mb-3">SmartERP Login</h4>
-    <form id="loginForm">
+    <div id="loginDiv" class="card p-4 mx-auto" style="max-width: 400px;">
       <div class="mb-3">
-        <label>Email</label>
-        <input type="email" class="form-control" id="email" required>
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" placeholder="admin@smarterp.com">
       </div>
       <div class="mb-3">
-        <label>Password</label>
-        <input type="password" class="form-control" id="password" required>
+        <label for="password" class="form-label">Password</label>
+        <input type="password" id="password" class="form-control" placeholder="Admin123!">
       </div>
-      <div class="mb-3">
-        <label>Role</label>
-        <select class="form-select" id="role">
-          <option value="admin">Admin</option>
-          <option value="manager">Manager</option>
-          <option value="employee">Employee</option>
-        </select>
-      </div>
-      <button class="btn btn-primary w-100" type="submit">Login</button>
-    </form>
+      <button id="loginBtn" class="btn btn-primary w-100">Login</button>
+      <p id="loginMsg" class="mt-3 text-danger"></p>
+    </div>
+
+    <div id="dashboardDiv" class="d-none">
+      <h2>Welcome, <span id="userName"></span></h2>
+      <p>Role: <span id="userRole"></span></p>
+      <button id="clockInBtn" class="btn btn-success me-2">Clock In</button>
+      <button id="clockOutBtn" class="btn btn-warning">Clock Out</button>
+      <p id="clockMsg" class="mt-3 text-success"></p>
+    </div>
   </div>
 
-  <script src="lib/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
